@@ -4,9 +4,3 @@
 //
 
 #pragma once
-
-
-#include <iostream>
-#include <tchar.h>
-
-// TODO: reference additional headers your program requires here
